Bug 53703 - [4.8 Regression] verify_ssa: definition in block 105 does not dominate use in block 103
Summary: [4.8 Regression] verify_ssa: definition in block 105 does not dominate use in...
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 4.8.0
: P3 normal
Target Milestone: 4.8.0
Assignee: Not yet assigned to anyone
URL:
Keywords: ice-on-valid-code
: 53715 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-17 09:59 UTC by David Binderman
Modified: 2012-06-20 14:34 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2012-06-17 00:00:00


Attachments
C source code (22.72 KB, text/x-csrc)
2012-06-17 09:59 UTC, David Binderman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Binderman 2012-06-17 09:59:18 UTC
Created attachment 27639 [details]
C source code

I just tried to compile the package gnet2-2.0.8-6
on gcc-4.8 trunk dated 20120617 on an AMD x86_64 box.

The compiler said

usagi_ifaddrs.c:428:1: error: definition in block 105 does not dominate use in block 103
 usagi_getifaddrs (struct ifaddrs **ifap)
 ^
for SSA_NAME: .MEM_375 in statement:
# VUSE <.MEM_375>
D.5483_238 = ifamap.address_len;
usagi_ifaddrs.c:428:1: internal compiler error: verify_ssa failed
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.

Preprocessed source code attached. Flag -O2 required.
Comment 1 H.J. Lu 2012-06-17 19:34:10 UTC
It is caused by revision 188457:

http://gcc.gnu.org/ml/gcc-cvs/2012-06/msg00367.html
Comment 2 Bill Schmidt 2012-06-17 21:47:38 UTC
Mine.  Investigating...
Comment 3 Bill Schmidt 2012-06-18 12:22:40 UTC
Author: wschmidt
Date: Mon Jun 18 12:22:37 2012
New Revision: 188731

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=188731
Log:
gcc:

2012-06-18  Bill Schmidt  <wschmidt@linux.ibm.com>

	PR tree-optimization/53703
	* tree-ssa-phiopt.c (hoist_adjacent_loads): Skip virtual phis;
	correctly set bb_for_def[12].

gcc/testsuite:

2012-06-18  Bill Schmidt  <wschmidt@linux.ibm.com>

	PR tree-optimization/53703
	* gcc.dg/torture/pr53703.c: New test.

Added:
    trunk/gcc/testsuite/gcc.dg/torture/pr53703.c
Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/testsuite/ChangeLog
    trunk/gcc/tree-ssa-phiopt.c
Comment 4 Bill Schmidt 2012-06-18 12:23:34 UTC
Fixed.
Comment 5 H.J. Lu 2012-06-18 14:33:05 UTC
*** Bug 53715 has been marked as a duplicate of this bug. ***
Comment 6 Bill Schmidt 2012-06-20 14:30:47 UTC
Author: wschmidt
Date: Wed Jun 20 14:30:39 2012
New Revision: 188835

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=188835
Log:
gcc:

2012-06-20  Bill Schmidt  <wschmidt@linux.ibm.com>

	PR tree-optimization/53703
	* tree-ssa-phiopt.c (hoist_adjacent_loads): Skip virtual phis;
	correctly set bb_for_def[12].

gcc/testsuite:

2012-06-20  Bill Schmidt  <wschmidt@linux.ibm.com>

	PR tree-optimization/53703
	* gcc.dg/torture/pr53703.c: New test.

Added:
    branches/ibm/gcc-4_6-branch/gcc/testsuite/gcc.dg/torture/pr53703.c
Modified:
    branches/ibm/gcc-4_6-branch/gcc/ChangeLog.ibm
    branches/ibm/gcc-4_6-branch/gcc/testsuite/ChangeLog.ibm
    branches/ibm/gcc-4_6-branch/gcc/tree-ssa-phiopt.c
Comment 7 Bill Schmidt 2012-06-20 14:34:15 UTC
Author: wschmidt
Date: Wed Jun 20 14:34:08 2012
New Revision: 188836

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=188836
Log:
gcc:

2012-06-20  Bill Schmidt  <wschmidt@linux.ibm.com>

	PR tree-optimization/53703
	* tree-ssa-phiopt.c (hoist_adjacent_loads): Skip virtual phis;
	correctly set bb_for_def[12].

gcc/testsuite:

2012-06-20  Bill Schmidt  <wschmidt@linux.ibm.com>

	PR tree-optimization/53703
	* gcc.dg/torture/pr53703.c: New test.

Added:
    branches/ibm/gcc-4_7-branch/gcc/testsuite/gcc.dg/torture/pr53703.c
Modified:
    branches/ibm/gcc-4_7-branch/gcc/ChangeLog.ibm
    branches/ibm/gcc-4_7-branch/gcc/testsuite/ChangeLog.ibm
    branches/ibm/gcc-4_7-branch/gcc/tree-ssa-phiopt.c